static: fix step name in url output
Revert "static: remove actions/configure-pages@v3"

This reverts commit d3e6be92e0f47ef4e5fa4f61eb750a76dc4f4904.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.setup_pages.outputs.base_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,6 +39,10 @@ jobs:
       - run: |
           npm install
           node index.js
+
+      - name: Setup Pages
+        id: setup_pages
+        uses: actions/configure-pages@v3
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
